# endpoints/IndexEndpoint.ts
@@ -4,7 +4,7 @@ import { WebserverEndpoint } from "./WebserverEndpoint";
 @Endpoint
 export class IndexEndpoint extends WebserverEndpoint {
     override openapi = {
-        summary: "Index endpoint to confirm server running",
+        summary: "Index endpoint to confirm server is running",
         tags: ["Index"],
         responses: {
             200: { description: "Server running" },
